# mesh-lang

./: .dockerignore  .gitignore  AGENTS.md  CI-SIMPLIFICATION-PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REPO-SPLIT-EXECUTION-PLAN.md  REPO-SPLIT-SUMMARY.md  SECURITY.md  SUPPORT.md  WORKSPACE.md  playwright.config.ts
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: authoritative-live-proof.yml  authoritative-starter-failover-proof.yml  authoritative-verification.yml  compatibility-matrix.yml  deploy-services.yml  deploy.yml  extension-release-proof.yml  publish-extension.yml  release.yml
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  OVERRIDES.md  PROJECT.md  QUEUE-ORDER.json  REQUIREMENTS.md  completed-units-M034.json  notifications.jsonl
articles/: ARTICLE_1.md  ARTICLE_2.md
benchmarks/: METHODOLOGY.md  README.md  run_benchmarks.sh
benchmarks/elixir/: mix.exs
benchmarks/fly/: README.md  run-benchmarks-isolated.sh  run-benchmarks.sh  start-server-isolated.sh
benchmarks/rust/: Cargo.toml
compiler/mesh-codegen/: Cargo.toml
compiler/mesh-lsp/: Cargo.toml
compiler/mesh-pkg/: Cargo.toml
compiler/mesh-pkg/src/: manifest.rs  scaffold.rs  toolchain_update.rs
compiler/mesh-pkg/tests/: toolchain_update.rs
compiler/mesh-rt/: Cargo.toml
compiler/meshc/: Cargo.toml
compiler/meshpkg/: Cargo.toml
examples/todo-postgres/: .dockerignore  .env.example  Dockerfile  README.md  config.mpl  docker-compose.yml  main.mpl  mesh.toml
examples/todo-sqlite/: Dockerfile  README.md  config.mpl  main.mpl  mesh.toml
packages-website/: fly.toml  package-lock.json  package.json
packages-website/src/: app.css  app.html
packages-website/static/: robots.txt
registry/: .env.example  Cargo.toml
registry/migrations/: 20260228000001_initial.sql  20260228000002_fts_index.sql
registry/src/: config.rs  error.rs
registry/src/db/: mod.rs  packages.rs
registry/src/routes/: metadata.rs  search.rs
scripts/: install-git-hooks.sh  materialize-hyperpush-mono.mjs  setup-local-workspace.sh  verify-m032-s01.sh  verify-m033-s01.sh  verify-m033-s02.sh  verify-m033-s03.sh  verify-m033-s04.sh  verify-m033-s05.sh  verify-m034-s01.sh  verify-m034-s02-workflows.sh  verify-m034-s03.ps1  verify-m034-s03.sh  verify-m034-s04-extension.sh  verify-m034-s05-workflows.sh  verify-m034-s05.sh  verify-m034-s06-remote-evidence.sh  verify-m036-s01.sh  verify-m036-s02.sh  verify-m036-s03.sh  verify-m039-s01.sh  verify-m039-s02.sh  verify-m039-s03.sh  verify-m039-s04-fly.sh  verify-m039-s04-proof-surface.sh  verify-m039-s04.sh  verify-m040-s01.sh  verify-m042-s01.sh  verify-m042-s02.sh  verify-m042-s03.sh  verify-m042-s04-fly.sh  verify-m042-s04-proof-surface.sh  verify-m042-s04.sh  verify-m043-s01.sh  verify-m043-s02.sh  verify-m043-s03.sh  verify-m043-s04-fly.sh  verify-m043-s04-proof-surface.sh  verify-m044-s01.sh  verify-m044-s02.sh  (+39 more)
scripts/fixtures/: m036-s01-syntax-corpus.json  m048-s04-cluster-decorators.mpl
scripts/lib/: clustered_fixture_paths.sh  m034_public_surface_contract.py  m039_cluster_proof.sh  m042_cluster_proof.sh  m043_cluster_proof.sh  m055-workspace.sh  m057_evidence_index.py  m057_project_items.graphql  m057_project_mutation_apply.py  m057_project_mutation_plan.py  m057_reconciliation_ledger.py  m057_repo_mutation_apply.py  m057_repo_mutation_plan.py  m057_tracker_inventory.py  repo-identity.json
scripts/tests/: verify-m034-s03-installed-build.ps1  verify-m034-s05-contract.test.mjs  verify-m034-s06-contract.test.mjs  verify-m034-s07-public-contract.test.mjs  verify-m036-s02-contract.test.mjs  verify-m036-s02-materialize-corpus.mjs  verify-m036-s02-materialize-corpus.test.mjs  (+28 more)
test-results/: .last-run.json
tests/: trait_codegen.mpl
tests/e2e/: env_get.mpl  (+52 more)
website/: package-lock.json  package.json  pnpm-lock.yaml
(+2146 files in other folders)
