[package]
name = "mesh-pkg"
version = "0.1.0"
edition = "2021"
description = "Mesh language package manager (manifest parsing, dependency resolution, lockfile)"

[dependencies]
mesh-common = { path = "../mesh-common" }
mesh-parser = { path = "../mesh-parser" }
mesh-typeck = { path = "../mesh-typeck" }
toml = { workspace = true }
git2 = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
